Add nav fallback logic to /funds endpoint